--- a/cfg/yolov3-tiny.cfg
+++ b/cfg/yolov3-tiny.cfg
@@ -1,7 +1,7 @@
 [net]
 # Testing
-batch=1
-subdivisions=1
+batch=64
+subdivisions=2
 # Training
 # batch=64
 # subdivisions=2
@@ -16,11 +16,13 @@ exposure = 1.5
 hue=.1
 
 learning_rate=0.001
-burn_in=1000
-max_batches = 500200
+burn_in=150
+max_batches=3000
+#policy=poly
+#power=4
 policy=steps
-steps=400000,450000
-scales=.1,.1
+steps=500,1000,1500,2000
+scales=.9,.7,.7,.5
 
 [convolutional]
 batch_normalize=1
@@ -124,7 +126,7 @@ activation=leaky
 size=1
 stride=1
 pad=1
-filters=255
+filters=27
 activation=linear
 
 
@@ -132,7 +134,7 @@ activation=linear
 [yolo]
 mask = 3,4,5
 anchors = 10,14,  23,27,  37,58,  81,82,  135,169,  344,319
-classes=80
+classes=4
 num=6
 jitter=.3
 ignore_thresh = .7
@@ -168,13 +170,13 @@ activation=leaky
 size=1
 stride=1
 pad=1
-filters=255
+filters=27
 activation=linear
 
 [yolo]
 mask = 0,1,2
 anchors = 10,14,  23,27,  37,58,  81,82,  135,169,  344,319
-classes=80
+classes=4
 num=6
 jitter=.3
 ignore_thresh = .7
