- Update: predict multiple frames.

--- a/cfg/yolov3-tiny.cfg
+++ b/cfg/yolov3-tiny.cfg
@@ -16,13 +16,12 @@ exposure = 1.5
 hue=.1
 
 learning_rate=0.001
-burn_in=300
-max_batches=3500
-#policy=poly
-#power=4
-policy=steps
-steps=1000,1500,2500,3000
-scales=.7,.6,.6,.5
+burn_in=2000
+max_batches=30000
+power=4
+policy=step
+steps=5000,9000,12000,15000
+scales=.9,.8,.8,.8
 
 [convolutional]
 batch_normalize=1
